--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-uploader": "^3.10.0",
     "react-use-measure": "^2.1.1",
     "request-ip": "^3.3.0",
+    "styled-components": "^6.0.2",
     "uploader": "^3.9.0"
   },
   "devDependencies": {
