--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-compare-slider": "^2.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
     "react-query": "^3.39.3",
     "react-uploader": "^3.10.0",
     "react-use-measure": "^2.1.1",
@@ -31,6 +32,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
